tests/ui/reborrow/coerce-shared-field-relations.stderr
error: implementing `CoerceShared` requires every target field to have a corresponding source field
  --> $DIR/coerce-shared-field-relations.rs:26:5
   |
LL |     target: &'a T,
   |     ^^^^^^^^^^^^^ target field `target` has no corresponding source field
...
LL | impl<'a, T> CoerceShared<RenamedRef<'a, T>> for RenamedMut<'a, T> {}
   |                                                 ----------------- source type `RenamedMut` does not contain field `target`

error: implementing `CoerceShared` requires corresponding fields to match, be reborrowable with `CoerceShared`, or coerce a mutable reference field to a shared reference field
  --> $DIR/coerce-shared-field-relations.rs:40:5
   |
LL |     value: &'a mut T,
   |     ---------------- source field `value` has type `&'a mut T`
...
LL |     value: &'a u32,
   |     ^^^^^^^^^^^^^^ target field `value` has type `&'a u32`
...
LL | impl<'a, T> CoerceShared<BadRef<'a, T>> for BadMut<'a, T> {}
   | ------------------------------------------------------------ required by this `CoerceShared` implementation

error: aborting due to 2 previous errors

